smokekde (4:4.7.4-0r1) UNRELEASED; urgency=low

  * New upstream release.

  [ Pino Toscano ]
  * Bump Standards-Version to 3.9.3, no changes required.
  * Bump debhelper build dependency to >= 9, and compat to 9.
  * Do not manually export CXXFLAGS and LDFLAGS now, since compat v9 does
    that already.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 02 Apr 2012 19:08:58 +0200

smokekde (4:4.7.1-1) unstable; urgency=low

  * New upstream release.

  [ David Palacio ]
  * Remove patches applied upstream:
    - fix_smoke_config_install_path.diff
    - fix-knewstuff2-binding.patch
    - fix-kutils-linking.patch

  [ Pino Toscano ]
  * Generate libraries shlibs based on the current version.
  * Tighten the various libraries dependencies to the current version.
  * Drop version for the smoke-dev-tools and libsmokeqt4-dev dependencies
    of libsmokekde4-dev; the right versions will be picked because of the
    stricter libsmokebase and libsmokeq* (indirect) dependencies.
  * Bump the smoke-dev-tools and libsmokeqt4-dev build-dependencies to 4.7.1.
  * Manually export CXXFLAGS and LDFLAGS from dpkg-buildflags now,
    as dpkg-buildpackage does not do that anymore.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 24 Sep 2011 17:24:18 +0200

smokekde (4:4.7.0-1) unstable; urgency=low

  * Initial release, split from the kdebindings source.

  [ David Palacio ]
  * Update control:
    - add libsmokekde4-dbg
    - update Uploaders
  * Switch to dh7:
    - clean rules
    - pass --list-missing to dh_install
  * Adapt watch file to the new source name.
  * Adapt Vcs fields.
  * Switch copyright to the DEP5 format, revision 174.
  * Add patch fix_smoke_config_install_path.diff to fix installation of the
    kde-config.xml configuration.

  [ Pino Toscano ]
  * Update control:
    - libsmokekde4-dbg: make it break/replace kdebindings-dbg, fix Section
      and Priority
    - improve descriptions