@@ -3,11 +3,7 @@
 pkgs_lib := $(filter-out %-dev %-dbg,$(filter lib%,$(shell dh_listpackages)))
 current_version := $(shell dpkg-parsechangelog | sed -n 's/^Version: //p')
 
-override_dh_auto_configure:
-	dh_auto_configure -- \
-	  -DCMAKE_EXE_LINKER_FLAGS="-Wl,--as-needed" \
-	  -DCMAKE_MODULE_LINKER_FLAGS="-Wl,--as-needed" \
-	  -DCMAKE_SHARED_LINKER_FLAGS="-Wl,--as-needed"
+export DEB_LDFLAGS_MAINT_APPEND := -Wl,--as-needed
 
 override_dh_install:
 	dh_install --list-missing
